# hpc-nearest-neighbour

./: .gitignore  CMakeLists.txt  README.md  compile.sh  run.sh  setup.sh
include/: Times.hpp  VecN.hpp  auxillary.hpp  omp_sections.hpp  omp_tasks.hpp  query.hpp  sections.hpp  serial.hpp  tasks.hpp
src/: VecN.cpp  auxillary.cpp  main.cpp  omp_sections.cpp  omp_tasks.cpp  sections.cpp  serial.cpp  tasks.cpp
tests/: knn_tests.cpp
